Add rpi-alpine-fabric image
Signed-off-by: Boris HUISGEN <boris@foobot.io>

--- a/Makefile.in
+++ b/Makefile.in
@@ -282,6 +282,7 @@ SUBDIRS = \
     rpi-alpine-base-consul \
     rpi-alpine-consul \
     rpi-alpine-dnsmasq \
+    rpi-alpine-fabric \
     rpi-alpine-hostapd \
     rpi-alpine-kivy \
     rpi-alpine-zabbix-agent
