--- a/configure.ac
+++ b/configure.ac
@@ -41,6 +41,7 @@ AC_CONFIG_FILES([
     rpi-alpine-base-consul/Makefile
     rpi-alpine-consul/Makefile
     rpi-alpine-dnsmasq/Makefile
+    rpi-alpine-fabric/Makefile
     rpi-alpine-hostapd/Makefile
     rpi-alpine-kivy/Makefile
     rpi-alpine-zabbix-agent/Makefile
