Add pip command
Signed-off-by: Boris HUISGEN <boris@foobot.io>

--- a/rpi-alpine-kivy/Dockerfile
+++ b/rpi-alpine-kivy/Dockerfile
@@ -5,7 +5,7 @@ ENV LD_LIBRARY_PATH=/opt/vc/lib
 
 COPY packages/*.apk /root/
 RUN apk add --update --allow-untrusted \
-        xclip \
+        py2-pip xclip \
         /root/*.apk && \
     rm -f /root/*.apk && \
     rm -rf /var/cache/apk/*
