Add rpi-alpine-build image
Signed-off-by: Boris HUISGEN <boris@foobot.io>

--- a/Makefile.in
+++ b/Makefile.in
@@ -280,6 +280,7 @@ top_srcdir = @top_srcdir@
 SUBDIRS = \
     rpi-alpine-base \
     rpi-alpine-base-consul \
+    rpi-alpine-build \
     rpi-alpine-consul \
     rpi-alpine-dnsmasq \
     rpi-alpine-fabric \
