--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 SUBDIRS = \
     rpi-alpine-base \
     rpi-alpine-base-consul \
+    rpi-alpine-build \
     rpi-alpine-consul \
     rpi-alpine-dnsmasq \
     rpi-alpine-fabric \
