Add rpi-alpine-build-make and rpi-alpine-build-python images
Signed-off-by: Boris HUISGEN <boris@foobot.io>

--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,8 @@ AC_CONFIG_FILES([
     rpi-alpine-base/Makefile
     rpi-alpine-base-consul/Makefile
     rpi-alpine-build/Makefile
+    rpi-alpine-build-make/Makefile
+    rpi-alpine-build-python/Makefile
     rpi-alpine-consul/Makefile
     rpi-alpine-dnsmasq/Makefile
     rpi-alpine-fabric/Makefile
