--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,8 @@ SUBDIRS = \
     rpi-alpine-base \
     rpi-alpine-base-consul \
     rpi-alpine-build \
+    rpi-alpine-build-make \
+    rpi-alpine-build-python \
     rpi-alpine-consul \
     rpi-alpine-dnsmasq \
     rpi-alpine-fabric \
