--- a/rpi-alpine-kivy/docker-compose.yml
+++ b/rpi-alpine-kivy/docker-compose.yml
@@ -15,15 +15,12 @@ services:
             - consul
         image: bhuisgen/rpi-alpine-kivy
         network_mode: host
-        volumes:
-            - /etc/localtime:/etc/localtime:ro
         devices:
             - /dev/vchiq
+            - /dev/input
+        volumes:
+            - /etc/localtime:/etc/localtime:ro
         environment:
             - CONSUL_AGENT=consul                  # consul agent hostname/IP
             #- CONSUL_PORT=8500                    # consul agent port
             #- CONSUL_KEYPREFIX=path/prefix/       # consul key prefix path
-            - HOSTAPD_INTERFACE=wlx74da386015cd    # AP interface
-            - HOSTAPD_SSID=${USERNAME}             # AP network SSID
-            - HOSTAPD_COUNTRYCODE=FR               # AP country code
-            - HOSTAPD_WPAPASSPHRASE=1234567890     # AP WPA passphrase
