--- a/rpi-alpine-build-python/Dockerfile
+++ b/rpi-alpine-build-python/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Boris HUISGEN <bhuisgen@hbis.fr>
 
 RUN apk add --update python3 py3-pip && \
     python3 -m ensurepip --upgrade && \
-    pip3 install -U pip setuptools setuptools_git setuptools_lint setuptools_pep8 && \
+    pip3 install -U pip setuptools setuptools_git setuptools_lint setuptools_pep8 setuptools_scm && \
     rm -rf /var/cache/apk/*
 
 COPY rootfs/ /
