--- a/rpi-alpine-base/docker-compose.skeleton.yml
+++ b/rpi-alpine-base/docker-compose.skeleton.yml
@@ -5,6 +5,6 @@ services:
         volumes:
             - /etc/localtime:/etc/localtime:ro
         environment:
-            #- CONTAINER_RESOLVER=route                 # IP resolver method for container (route/interface, default: route)
+            #- CONTAINER_RESOLVER=route                 # IP resolver method for container (disable/route/interface, default: route)
             #- CONTAINER_RESOLVER_INTERFACENAME=eth0    # network interface name for IP resolver (default: eth0)
             #- CONTAINER_RESOLVER_INTERFACETYPE=inet    # network interface type for IP resolver (inet/inet6, default: inet)
