--- a/rpi-alpine-base/Dockerfile
+++ b/rpi-alpine-base/Dockerfile
@@ -1,6 +1,8 @@
 FROM armhf/alpine:3.5
 MAINTAINER Boris HUISGEN <bhuisgen@hbis.fr>
 
+ARG BUILD_ARCH=x86_64
+
 ENV S6OVERLAY_VERSION=v1.19.1.1 \
     S6_BEHAVIOUR_IF_STAGE2_FAILS=1 \
     LANG=en_US.UTF-8 \
@@ -8,11 +10,15 @@ ENV S6OVERLAY_VERSION=v1.19.1.1 \
     LANGUAGE=en_US.UTF-8 \
     TERM=xterm
 
+COPY packages/build/${BUILD_ARCH}/*.apk /root/
 RUN apk update && \
     apk upgrade && \
-    apk add bash bind-tools ca-certificates curl jq tar && \
+    apk add --allow-untrusted \
+        bash bind-tools ca-certificates curl jq tar \
+        /root/*.apk && \
     curl -sSL https://github.com/just-containers/s6-overlay/releases/download/${S6OVERLAY_VERSION}/s6-overlay-armhf.tar.gz | tar xz -C / && \
     apk del tar && \
-    rm -rf /var/cache/apk/* /src
+    rm -f /root/*.apk && \
+    rm -rf /var/cache/apk/*
 
 COPY rootfs/ /
