Add new ACL settings for agents and servers
Signed-off-by: Boris HUISGEN <boris@foobot.io>

--- a/rpi-alpine-consul/docker-compose.yml
+++ b/rpi-alpine-consul/docker-compose.yml
@@ -25,10 +25,14 @@ services:
             - CONSUL_TLSCAFILE=/etc/consul.d/ssl/ca.pem                         # TLS CA certificate file
             - CONSUL_TLSCERTFILE=/etc/consul.d/ssl/server.pem                   # TLS server certificate file
             - CONSUL_TLSKEYFILE=/etc/consul.d/ssl/server-priv-key.pem           # TLS server certificate key file
-            - CONSUL_ACLDATACENTER=local                                        # ACL authoritative datacenter (server only)
-            - CONSUL_ACLMASTERTOKEN=a29fc95f-2501-4fd1-902c-686151082fe9        # ACL master token (server only)
-            - CONSUL_ACLDEFAULTPOLICY=deny                                      # ACL default policy (server only)
-            #- CONSUL_ACLDOWNPOLICY=extend-cache                                # ACL down policy (server only)
+            #- CONSUL_ACLDATACENTER=                                            # ACL authoritative datacenter
+            #- CONSUL_ACLMASTERTOKEN=                                           # ACL master token (server only)
+            #- CONSUL_ACLTOKEN=                                                 # ACL token
+            #- CONSUL_ACLAGENTMASTERTOKEN=                                      # ACL token during server outage (agent only)
+            #- CONSUL_ACLAGENTTOKEN=                                            # ACL token for internal operations (agent only, ACL token by default)
+            #- CONSUL_ACLREPLICATIONTOKEN=                                      # ACL token for replication outside of datacenter (server only)
+            #- CONSUL_ACLDEFAULTPOLICY=extend-cache                             # ACL default policy (server only)
+            #- CONSUL_ACLDOWNPOLICY=extend-cache                                # ACL down policy
             #- CONSUL_ACLTTL=30                                                 # ACL TTL (server only)
-            #- CONSUL_ACLTOKEN=d17fade7-2391-45a4-aa00-c9ed5e707e0b             # ACL token (client only)
+            #- CONSUL_ACLENFORCEVERSION8=false                                  # Enforce ACL version 8
             #- CONSUL_RAFTMULTIPLIER=0                                          # Raft mutliplier
