Add zabbix host setting
Signed-off-by: Boris HUISGEN <boris@foobot.io>

--- a/rpi-alpine-zabbix-agent/docker-compose.yml
+++ b/rpi-alpine-zabbix-agent/docker-compose.yml
@@ -41,6 +41,7 @@ services:
             #- ZABBIX_TIMEOUT=3                                                 # timeout of processing
             #- ZABBIX_UNSAFEUSERPARAMETERS=                                     # enable unsafe user parameters
             #- ZABBIXDOCKER=0                                                   # enable docker monitoring
+            #- ZABBIXDOCKER_ZABBIXHOST=                                         # zabbix host
             #- ZABBIXDOCKER_LOG=0                                               # enable logging
             #- ZABBIXDOCKER_LOGLEVEL=error                                      # log level
             #- ZABBIXDOCKER_CONTAINERS=0                                        # enable containers metrics
