Update apk commands
Signed-off-by: Boris HUISGEN <boris@foobot.io>

--- a/rpi-alpine-kivy/Dockerfile
+++ b/rpi-alpine-kivy/Dockerfile
@@ -4,8 +4,8 @@ MAINTAINER Boris HUISGEN <bhuisgen@hbis.fr>
 ENV LD_LIBRARY_PATH=/opt/vc/lib
 
 COPY packages/*.apk /root/
-RUN apk add --update --allow-untrusted \
-        py2-pip xclip \
+RUN apk add --update py2-pip xclip && \
+    apk add --allow-untrusted \
         /root/*.apk && \
     pip install kivy-garden && \
     rm -f /root/*.apk && \
