--- a/Makefile.in
+++ b/Makefile.in
@@ -232,6 +232,7 @@ PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
 PULL_OPTIONS = @PULL_OPTIONS@
+PUSH_OPTIONS = @PUSH_OPTIONS@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
 STRIP = @STRIP@
