--- a/rpi-alpine-zabbix-agent/Makefile.in
+++ b/rpi-alpine-zabbix-agent/Makefile.in
@@ -402,7 +402,7 @@ build-local:
 	docker build $(BUILD_OPTIONS) -t $(IMAGE):$(TAG) .
 
 pull-local:
-	docker pull $(IMAGE):$(TAG) $(PULL_OPTIONS)
+	docker pull $(PULL_OPTIONS) $(IMAGE):$(TAG)
 
 push-local: build-local
 	docker push $(PUSH_OPTIONS) $(IMAGE):$(TAG)
