--- a/rpi-alpine-build-make/Makefile.in
+++ b/rpi-alpine-build-make/Makefile.in
@@ -113,7 +113,8 @@ am__can_run_installinfo = \
     n|no|NO) false;; \
     *) (install-info --version) >/dev/null 2>&1;; \
   esac
-am__extra_recursive_targets = build-recursive pull-recursive
+am__extra_recursive_targets = build-recursive pull-recursive \
+	push-recursive
 am__tagged_files = $(HEADERS) $(SOURCES) $(TAGS_FILES) $(LISP)
 am__DIST_COMMON = $(srcdir)/Makefile.in
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -233,6 +234,7 @@ $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 $(am__aclocal_m4_deps):
 build-local: 
 pull-local: 
+push-local: 
 tags TAGS:
 
 ctags CTAGS:
@@ -304,8 +306,6 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
-build: build-am
-
 build-am: build-local
 
 clean: clean-am
@@ -372,15 +372,15 @@ ps: ps-am
 
 ps-am:
 
-pull: pull-am
-
 pull-am: pull-local
+
+push-am: push-local
 
 uninstall-am:
 
 .MAKE: install-am install-strip
 
-.PHONY: all all-am build-am build-local check check-am clean \
+.PHONY: all all-am build build-am build-local check check-am clean \
 	clean-generic clean-local cscopelist-am ctags-am distclean \
 	distclean-generic distdir dvi dvi-am html html-am info info-am \
 	install install-am install-data install-data-am install-dvi \
@@ -389,8 +389,9 @@ uninstall-am:
 	install-pdf install-pdf-am install-ps install-ps-am \
 	install-strip installcheck installcheck-am installdirs \
 	maintainer-clean maintainer-clean-generic mostlyclean \
-	mostlyclean-generic pdf pdf-am ps ps-am pull-am pull-local \
-	tags-am uninstall uninstall-am
+	mostlyclean-generic pdf pdf-am ps ps-am pull pull-am \
+	pull-local push push-am push-local tags-am uninstall \
+	uninstall-am
 
 .PRECIOUS: Makefile
 
@@ -398,13 +399,13 @@ uninstall-am:
 clean-local:
 	docker rmi $(CLEAN_OPTIONS) $(IMAGE):$(TAG) || true
 
-build-local:
+build:
 	docker build $(BUILD_OPTIONS) -t $(IMAGE):$(TAG) .
 
-pull-local:
+pull:
 	docker pull $(PULL_OPTIONS) $(IMAGE):$(TAG)
 
-push-local: build-local
+push: build
 	docker push $(PUSH_OPTIONS) $(IMAGE):$(TAG)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
