--- a/rpi-alpine-base-consul/Dockerfile
+++ b/rpi-alpine-base-consul/Dockerfile
@@ -4,8 +4,8 @@ MAINTAINER Boris HUISGEN <bhuisgen@hbis.fr>
 ENV CONSULTEMPLATE_VERSION=0.19.0
 
 RUN mkdir -p /var/lib/consul && \
-    addgroup -S consul && \
-    adduser -S -D -g "" -G consul -s /sbin/nologin -h /var/lib/consul consul && \
+    addgroup -g 500 -S consul && \
+    adduser -u 500 -S -D -g "" -G consul -s /sbin/nologin -h /var/lib/consul consul && \
     chown -R consul:consul /var/lib/consul
 
 RUN apk add --update zip && \
