Add rpi-alpine-jenkins and rpi-alpine-jenkins-slave images
Signed-off-by: Boris HUISGEN <boris@foobot.io>

--- a/configure.ac
+++ b/configure.ac
@@ -47,6 +47,8 @@ AC_CONFIG_FILES([
     rpi-alpine-dnsmasq/Makefile
     rpi-alpine-fabric/Makefile
     rpi-alpine-hostapd/Makefile
+    rpi-alpine-jenkins/Makefile
+    rpi-alpine-jenkins-slave/Makefile
     rpi-alpine-kivy/Makefile
     rpi-alpine-rng/Makefile
     rpi-alpine-zabbix-agent/Makefile
