--- a/Makefile.in
+++ b/Makefile.in
@@ -289,6 +289,8 @@ SUBDIRS = \
     rpi-alpine-dnsmasq \
     rpi-alpine-fabric \
     rpi-alpine-hostapd \
+    rpi-alpine-jenkins \
+    rpi-alpine-jenkins-slave \
     rpi-alpine-kivy \
     rpi-alpine-rng \
     rpi-alpine-zabbix-agent
