Cleanup rpi-alpine-base-consul TLS files
Signed-off-by: Boris HUISGEN <boris@foobot.io>

--- a/rpi-alpine-base-consul/.dockerignore
+++ b/rpi-alpine-base-consul/.dockerignore
@@ -1,3 +1,4 @@
+rootfs/etc/consul.d/ssl/.gitkeep
 rootfs/etc/consul-template/conf-services.d/.gitkeep
 rootfs/etc/cont-consul/services.d/.gitkeep
 rootfs/etc/cont-consul/checks.d/.gitkeep
