--- a/rpi-alpine-jenkins-slave/Dockerfile
+++ b/rpi-alpine-jenkins-slave/Dockerfile
@@ -3,10 +3,10 @@ LABEL maintainer="Boris HUISGEN <bhuisgen@hbis.fr>"
 
 ENV JENKINS_HOME=/home/jenkins
 
-RUN mkdir -p ${JENKINS_HOME} && \
+RUN mkdir ${JENKINS_HOME} && \
     addgroup -S jenkins && \
     adduser -S -D -g "" -G jenkins -s /bin/sh -h ${JENKINS_HOME} jenkins && \
-    chown -R jenkins:jenkins ${JENKINS_HOME}
+    chown jenkins:jenkins ${JENKINS_HOME}
 
 RUN apk add --update git docker openjdk8-jre openssh && \
     rm -rf /var/cache/apk/*
