Use zabbix-docker-0.3.0 and update config
Signed-off-by: Boris HUISGEN <bhuisgen@hbis.fr>

--- a/rpi-alpine-zabbix-agent/docker-compose.yml
+++ b/rpi-alpine-zabbix-agent/docker-compose.yml
@@ -25,10 +25,11 @@ services:
             - CONSUL_CHECKTYPE=tcp                          # consul health check type
             - ZABBIX_ENABLEREMOTECOMMANDS=1                 # enable remote commands execution
             - ZABBIX_LOGREMOTECOMMANDS=1                    # log remote commands
-            - ZABBIX_SERVER=80.81.82.83                     # zabbix server IP/host
+            - ZABBIX_SERVER=0.0.0.0/0                       # zabbix server (IP/host/CIDR comma delimited list)
             - ZABBIX_HOSTNAME=zabbix-agent                  # zabbix agent hostname
             #- ZABBIX_HOSTMETADATA=                         # zabbix agent host metadata
             - ZABBIX_STARTAGENTS=1                          # number of processes for passive checks
+            - ZABBIX_SERVERACTIVE=10.0.0.1                  # zabbix server for active checks (IP/host comma delimited list)
             #- ZABBIX_REFRESHACTIVECHECKS=120               # time between active checks refresh
             #- ZABBIX_BUFFERSEND=5                          # time to keep data in buffer
             #- ZABBIX_BUFFERSIZE=100                        # maximum number of values in buffer before sending
@@ -37,13 +38,15 @@ services:
             #- ZABBIX_ROOTFILESYSTEM=                       # host rootfs
             #- ZABBIX_UNSAFEUSERPARAMETERS=                 # enable unsafe user parameters
             #- ZABBIXDOCKER=0                               # enable docker monitoring
-            #- ZABBIXDOCKER_ZABBIXHOST=                     # zabbix host
             #- ZABBIXDOCKER_LOG=0                           # enable logging
             #- ZABBIXDOCKER_LOGLEVEL=error                  # log level
+            - ZABBIXDOCKER_ROOTFS=/rootfs                   # rootfs path to use for system metrics
             #- ZABBIXDOCKER_CONTAINERS=0                    # enable containers metrics
             #- ZABBIXDOCKER_CONTAINERSSTATS=0               # enable containers statistics metrics
             #- ZABBIXDOCKER_CONTAINERSTOP=0                 # enable containers processes metrics
             #- ZABBIXDOCKER_CONTAINERSREMOTE=0              # enable containers remote command execution
-            #- ZABBIXDOCKER_CONTAINERSREMOTEPATH=/etc/zabbix/scripts/trapper    # remote commands path
-            #- ZABBIXDOCKER_CONTAINERSREMOTEDELAY=1         # remote commands delay
             #- ZABBIXDOCKER_EVENTS=0                        # enable events metrics
+            #- ZABBIXDOCKER_ZABBIX_SERVER=                  # zabbix server to send metrics
+            #- ZABBIXDOCKER_ZABBIX_HOSTNAME=                # zabbix hostname for sended metrics
+            #- ZABBIXDOCKER_CONTAINERSREMOTE_PATH=/etc/zabbix/scripts/trapper   # remote commands path
+            #- ZABBIXDOCKER_CONTAINERSREMOTE_DELAY=1        # remote commands delay
