--- a/Makefile.in
+++ b/Makefile.in
@@ -290,8 +290,10 @@ SUBDIRS = \
     rpi-alpine-hostapd \
     rpi-alpine-jenkins-slave \
     rpi-alpine-kivy \
+    rpi-alpine-nginx \
     rpi-alpine-rng \
-    rpi-alpine-zabbix-agent
+    rpi-alpine-zabbix-agent \
+    rpi-alpine-zabbix-monitor
 
 all: all-recursive
 
