Update compose files
Signed-off-by: Boris HUISGEN <bhuisgen@hbis.fr>

--- a/rpi-alpine-consul/docker-compose.server.yml
+++ b/rpi-alpine-consul/docker-compose.server.yml
@@ -29,8 +29,9 @@ services:
 
             - CONSUL_OPTIONS=-server -bootstrap-expect 1 -client 0.0.0.0 -ui    # server mode with UI
             - CONSUL_DATACENTER=local                   # datacenter
-            - CONSUL_DOMAIN=consul                      # domain name
+            #- CONSUL_DOMAIN=consul                     # domain name
             - CONSUL_ENCRYPT=h2N6R1eyTysjBzzXxAWJvA==   # encryption key
+            #- CONSUL_RAFTMULTIPLIER=5                  # raft mutliplier
             #- CONSUL_TLS=0                             # enable TLS
             #- CONSUL_TLSCAFILE=                        # TLS CA certificate file
             #- CONSUL_TLSCERTFILE=                      # TLS server certificate file (server)
@@ -44,5 +45,4 @@ services:
             #- CONSUL_ACLDEFAULTPOLICY=extend-cache     # ACL default policy (server only)
             #- CONSUL_ACLDOWNPOLICY=extend-cache        # ACL down policy
             #- CONSUL_ACLTTL=30                         # ACL TTL (server only)
-            #- CONSUL_ACLENFORCEVERSION8=true           # Enforce ACL version 8
-            #- CONSUL_RAFTMULTIPLIER=0                  # Raft mutliplier
+            #- CONSUL_ACLENFORCEVERSION8=true           # enforce ACL version 8
